sample-app/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sampleapp
  labels:
    istio-injection: enabled
