sample-app/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  template:
    spec:
      containers:
      - name: httpbin
        resources:
          limits:
            cpu: "0.5"
            memory: "200Mi"
          requests:
            cpu: "0.2"
            memory: "100Mi"
