sample-app/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: sample-app
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/istio-gw
  http:
    - name: httpbin
      route:
        - destination:
            host: httpbin
            port:
              number: 8000
